# domjudge-tool-web

./: .dockerignore  .editorconfig  .gitignore  .yapfignore  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yaml  pyproject.toml  setup.cfg
deploy/: .env.app.example  .env.example  docker-compose.yml
deploy/caddy/: Caddyfile
docker/: django-logrotate  django-logrotate.sh  django.logrotate.conf  entrypoint.sh  uwsgi.ini  wait_database.py
src/app/domservers/: __init__.py  admin.py  apps.py  exceptions.py  forms.py  urls.py  views.py
src/app/domservers/migrations/: 0001_initial.py  0001_initial_squashed_0009_alter_domservercontest_options.py  0002_alter_domserverclient_mask_password.py  0003_alter_domserverclient_mask_password.py  0004_contestrecord.py  0005_rename_user_contestrecord_owner.py  0006_alter_domserverclient_name.py  0007_rename_domjudge_contest_id_contestrecord_cid.py  0008_auto_20240401_1556.py  0009_alter_domservercontest_options.py
src/app/domservers/models/: __init__.py  dom_server.py
src/app/domservers/templates/: contest.html  contest_creat_selected_problem.html  contest_create.html  contest_create_selected_problem.html  contest_edit.html  contest_edit_selected_problem.html  contest_list.html  contest_problem_edit_shortname.html  contest_problem_shortname.html  contest_problem_shortname_create.html  contest_problem_shortname_edit.html  contest_selected_problem.html
src/app/problems/: __init__.py  admin.py  apiurls.py  apps.py  crawler.py  exceptions.py  forms.py  models.py  serializers.py  unzip.py  urls.py  views.py  viewsets.py
src/app/users/: __init__.py  admin.py  apps.py  forms.py  models.py  views.py
src/core/: .env.example  docs.py  settings.py  urls.py
src/core/components/: docs.py  jazzmin.py  restful.py
src/core/environments/: production.py
src/fixtures/: groups.json
src/static/: jazzmin.css
src/static/js/: bootstrap_form_validation.js  page_back.js  selected_problem.js  shortname_get_form_value.js
src/templates/: register.html
src/templates/admin/: base_site.html  contest_add.html  contest_edit.html  contest_selected_problem.html  contest_selected_problem_edit.html  get_contests.html  index.html  login.html  updown_process.html  upload_process.html
src/templates/django_object_actions/: change_form.html
src/utils/: admins.py  crawler.py  exceptions.py  forms.py  models.py  validator_pydantic.py  views.py
src/utils/domserver/: views.py
src/utils/problems/: admin.py  validator.py  validator_pydantic.py  views.py
(+43 files in other folders)
