[tool.poetry]
name = "domjudge-tool-web"
version = "0.1.0"
description = ""
authors = ["jasonxie"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2.16"
django-extensions = "*"
pyyaml = "*"
django-environ = "*"
django-split-settings = "*"
psycopg2-binary = "*"
sentry-sdk = "*"
django-object-actions = "*"
djangorestframework = "^3.14.0"
django-filter = "^22.1"
drf-yasg = "^1.21.4"
django-cors-headers = "^3.13.0"
django-jazzmin = "<=2.4.4"
uWSGI = "^2.0.20"

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
Werkzeug = "^2.2.2"
black = "^22.10.0"
flake8 = "^5.0.4"
flake8-commas = "^2.1.0"
mypy = "^0.982"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = '''
/(
  | migrations
)/
'''
