[tool.poetry]
name = "domjudge-tool-web"
version = "0.1.0"
description = ""
authors = ["jasonxie"]

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.2.16"
django-extensions = "*"
pyyaml = "*"
django-environ = "*"
django-split-settings = "*"
psycopg2-binary = "*"
sentry-sdk = "*"
django-object-actions = "*"
djangorestframework = "^3.14.0"
django-filter = "^22.1"
drf-yasg = "^1.21.4"
django-cors-headers = "^3.13.0"
#uWSGI = "^2.0.20"
pydantic = "^2.1.1"
django-cryptography = "^1.1"
django-widget-tweaks = "^1.5.0"
django-jazzmin = "2.4.4"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
whitenoise = "^6.6.0"

[tool.poetry.group.dev.dependencies]
ipython = "^8.5.0"
Werkzeug = "^2.2.2"
black = "^22.10.0"
flake8 = "^5.0.4"
flake8-commas = "^2.1.0"
mypy = "^0.982"
isort = "^5.10.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
extend-exclude = '''
/(
  | migrations
)/
'''
